# serializer version: 1
# name: test_all_entities[c2c_arlo_pro_3_switch][switch.2nd_floor_hallway-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.2nd_floor_hallway',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '10e06a70-ee7d-4832-85e9-a0a06a7a05bd_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[c2c_arlo_pro_3_switch][switch.2nd_floor_hallway-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '2nd Floor Hallway',
    }),
    'context': <ANY>,
    'entity_id': 'switch.2nd_floor_hallway',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[da_ref_normal_000001][switch.refrigerator_ice_maker-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.refrigerator_ice_maker',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ice maker',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ice_maker',
    'unique_id': '7db87911-7dce-1cf2-7119-b953432a2f09_icemaker_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_000001][switch.refrigerator_ice_maker-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator Ice maker',
    }),
    'context': <ANY>,
    'entity_id': 'switch.refrigerator_ice_maker',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ref_normal_000001][switch.refrigerator_sabbath_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.refrigerator_sabbath_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sabbath mode',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sabbath_mode',
    'unique_id': '7db87911-7dce-1cf2-7119-b953432a2f09_main_samsungce.sabbathMode_status_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_000001][switch.refrigerator_sabbath_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator Sabbath mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.refrigerator_sabbath_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_ref_normal_01001][switch.refrigerator_ice_maker-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.refrigerator_ice_maker',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ice maker',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ice_maker',
    'unique_id': '7d3feb98-8a36-4351-c362-5e21ad3a78dd_icemaker_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_ref_normal_01001][switch.refrigerator_ice_maker-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Refrigerator Ice maker',
    }),
    'context': <ANY>,
    'entity_id': 'switch.refrigerator_ice_maker',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][switch.robot_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.robot_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3442dfc6-17c0-a65f-dae0-4c6e01786f44_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_rvc_normal_000001][switch.robot_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Robot vacuum',
    }),
    'context': <ANY>,
    'entity_id': 'switch.robot_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][switch.eco_heating_system-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.eco_heating_system',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1f98ebd0-ac48-d802-7f62-000001200100_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_sac_ehs_000001_sub][switch.eco_heating_system-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Eco Heating System',
    }),
    'context': <ANY>,
    'entity_id': 'switch.eco_heating_system',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_wm_wd_000001][switch.dryer_wrinkle_prevent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.dryer_wrinkle_prevent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wrinkle prevent',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wrinkle_prevent',
    'unique_id': '02f7256e-8353-5bdd-547f-bd5b1647e01b_main_custom.dryerWrinklePrevent_dryerWrinklePrevent_dryerWrinklePrevent',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wd_000001][switch.dryer_wrinkle_prevent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dryer Wrinkle prevent',
    }),
    'context': <ANY>,
    'entity_id': 'switch.dryer_wrinkle_prevent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_wm_wd_000001_1][switch.seca_roupa_wrinkle_prevent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.seca_roupa_wrinkle_prevent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wrinkle prevent',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wrinkle_prevent',
    'unique_id': '3a6c4e05-811d-5041-e956-3d04c424cbcd_main_custom.dryerWrinklePrevent_dryerWrinklePrevent_dryerWrinklePrevent',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wd_000001_1][switch.seca_roupa_wrinkle_prevent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Seca-Roupa Wrinkle prevent',
    }),
    'context': <ANY>,
    'entity_id': 'switch.seca_roupa_wrinkle_prevent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][switch.washing_machine_bubble_soak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.washing_machine_bubble_soak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bubble Soak',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bubble_soak',
    'unique_id': '63803fae-cbed-f356-a063-2cf148ae3ca7_main_samsungce.washerBubbleSoak_status_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][switch.washing_machine_bubble_soak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washing Machine Bubble Soak',
    }),
    'context': <ANY>,
    'entity_id': 'switch.washing_machine_bubble_soak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[generic_ef00_v1][switch.thermostat_kuche-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.thermostat_kuche',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '656569c2-7976-4232-a789-34b4d1176c3a_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[generic_ef00_v1][switch.thermostat_kuche-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Thermostat Küche',
    }),
    'context': <ANY>,
    'entity_id': 'switch.thermostat_kuche',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[sensibo_airconditioner_1][switch.office-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.office',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'bf4b1167-48a3-4af7-9186-0900a678ffa5_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensibo_airconditioner_1][switch.office-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Office',
    }),
    'context': <ANY>,
    'entity_id': 'switch.office',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[smart_plug][switch.arlo_beta_basestation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.arlo_beta_basestation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '550a1c72-65a0-4d55-b97b-75168e055398_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[smart_plug][switch.arlo_beta_basestation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arlo Beta Basestation',
    }),
    'context': <ANY>,
    'entity_id': 'switch.arlo_beta_basestation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[tplink_p110][switch.spulmaschine-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.spulmaschine',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '6602696a-1e48-49e4-919f-69406f5b5da1_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[tplink_p110][switch.spulmaschine-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spülmaschine',
    }),
    'context': <ANY>,
    'entity_id': 'switch.spulmaschine',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[vd_sensor_light_2023][switch.light_sensor_55_the_frame-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.light_sensor_55_the_frame',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '5cc1c096-98b9-460c-8f1c-1045509ec605_main_switch_switch_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[vd_sensor_light_2023][switch.light_sensor_55_the_frame-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Light Sensor - 55" The Frame',
    }),
    'context': <ANY>,
    'entity_id': 'switch.light_sensor_55_the_frame',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
